force-app/main/default/objects/Product2/fields/AMOSCertificateOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>AMOSCertificateOfOrigin__c</fullName>
    <label>AMOSCertificateOfOrigin</label>
    <length>2</length>
    <type>Text</type>
</CustomField>