force-app/main/default/objects/Product2/fields/AMOSCharAnalysisCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSCharAnalysisCode__c</fullName>
    <label>AMOSCharAnalysisCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>