force-app/main/default/objects/Product2/fields/AMOSCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSCompanyCode__c</fullName>
    <label>AMOSCompanyCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>