force-app/main/default/objects/Product2/fields/AMOSCompanyKindCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSCompanyKindCode__c</fullName>
    <label>AMOSCompanyKindCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>