force-app/main/default/objects/Product2/fields/AMOSCompletionFlag__c.field-meta.xml
<CustomField>
    <fullName>AMOSCompletionFlag__c</fullName>
    <label>AMOSCompletionFlag</label>
    <length>15</length>
    <type>Text</type>
</CustomField>