force-app/main/default/objects/Product2/fields/AMOSDimensionalMeasurement__c.field-meta.xml
<CustomField>
    <fullName>AMOSDimensionalMeasurement__c</fullName>
    <label>AMOSDimensionalMeasurement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>