force-app/main/default/objects/Product2/fields/AMOSDiscountGroup__c.field-meta.xml
<CustomField>
    <fullName>AMOSDiscountGroup__c</fullName>
    <label>AMOSDiscountGroup</label>
    <length>2</length>
    <type>Text</type>
</CustomField>