force-app/main/default/objects/Product2/fields/AMOSDistributorSegment__c.field-meta.xml
<CustomField>
    <fullName>AMOSDistributorSegment__c</fullName>
    <label>AMOSDistributorSegment</label>
    <length>2</length>
    <type>Text</type>
</CustomField>