force-app/main/default/objects/Product2/fields/AMOSHSCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSHSCode__c</fullName>
    <label>AMOSHSCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>