force-app/main/default/objects/Product2/fields/AMOSLAC__c.field-meta.xml
<CustomField>
    <fullName>AMOSLAC__c</fullName>
    <label>AMOSLAC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>