force-app/main/default/objects/Product2/fields/AMOSLargeGroup__c.field-meta.xml
<CustomField>
    <fullName>AMOSLargeGroup__c</fullName>
    <label>AMOSLargeGroup</label>
    <length>2</length>
    <type>Text</type>
</CustomField>