force-app/main/default/objects/Product2/fields/AMOSLegalCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSLegalCode__c</fullName>
    <label>AMOSLegalCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>