force-app/main/default/objects/Product2/fields/AMOSMAC__c.field-meta.xml
<CustomField>
    <fullName>AMOSMAC__c</fullName>
    <label>AMOSMAC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>