force-app/main/default/objects/Product2/fields/AMOSNewPartNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSNewPartNo__c</fullName>
    <label>AMOSNewPartNo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>