force-app/main/default/objects/Product2/fields/AMOSOldPartNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSOldPartNo__c</fullName>
    <label>AMOSOldPartNo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>