force-app/main/default/objects/Product2/fields/AMOSPackagingunit__c.field-meta.xml
<CustomField>
    <fullName>AMOSPackagingunit__c</fullName>
    <label>AMOSPackagingunit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>