force-app/main/default/objects/Product2/fields/AMOSPartName__c.field-meta.xml
<CustomField>
    <fullName>AMOSPartName__c</fullName>
    <label>AMOSPartName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>