force-app/main/default/objects/Product2/fields/AMOSPartNo__c.field-meta.xml
<CustomField>
    <fullName>AMOSPartNo__c</fullName>
    <label>AMOSPartNo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>