force-app/main/default/objects/Product2/fields/AMOSPDC__c.field-meta.xml
<CustomField>
    <fullName>AMOSPDC__c</fullName>
    <label>AMOSPDC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>