force-app/main/default/objects/Product2/fields/AMOSProductCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductCategoryCode__c</fullName>
    <label>AMOSProductCategoryCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>