force-app/main/default/objects/Product2/fields/AMOSProductCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductCode__c</fullName>
    <label>AMOSProductCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>