force-app/main/default/objects/Product2/fields/AMOSProductCodeNEW__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductCodeNEW__c</fullName>
    <label>AMOSProductCodeNEW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>