force-app/main/default/objects/Product2/fields/AMOSProductCodeOLD__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductCodeOLD__c</fullName>
    <label>AMOSProductCodeOLD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>