force-app/main/default/objects/Product2/fields/AMOSProductType__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductType__c</fullName>
    <label>AMOSProductType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>