force-app/main/default/objects/Product2/fields/AMOSProductTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductTypeCode__c</fullName>
    <label>AMOSProductTypeCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>