force-app/main/default/objects/Product2/fields/AMOSRemanufacturePartCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSRemanufacturePartCode__c</fullName>
    <label>AMOSRemanufacturePartCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>