force-app/main/default/objects/Product2/fields/AMOSSAC__c.field-meta.xml
<CustomField>
    <fullName>AMOSSAC__c</fullName>
    <label>AMOSSAC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>