force-app/main/default/objects/Product2/fields/AMOSStockCount__c.field-meta.xml
<CustomField>
    <fullName>AMOSStockCount__c</fullName>
    <label>AMOSStockCount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>