force-app/main/default/objects/Product2/fields/AMOSWeightMeasurement__c.field-meta.xml
<CustomField>
    <fullName>AMOSWeightMeasurement__c</fullName>
    <label>AMOSWeightMeasurement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>