force-app/main/default/objects/Product2/fields/AMOSZone__c.field-meta.xml
<CustomField>
    <fullName>AMOSZone__c</fullName>
    <label>AMOSZone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>