force-app/main/default/objects/Product2/fields/DAOSMinimumOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>DAOSMinimumOrderQuantity__c</fullName>
    <label>DAOSMinimumOrderQuantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>