force-app/main/default/objects/Product2/fields/DE_Message__c.field-meta.xml
<CustomField>
    <fullName>DE_Message__c</fullName>
    <label>DE Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>