force-app/main/default/objects/Product2/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>