force-app/main/default/objects/Product2/fields/NRRP__c.field-meta.xml
<CustomField>
    <fullName>NRRP__c</fullName>
    <label>NRRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>