force-app/main/default/objects/Product2/fields/OP_Code__c.field-meta.xml
<CustomField>
    <fullName>OP_Code__c</fullName>
    <label>OP Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>