force-app/main/default/objects/Product2/fields/ProductDealerPriceDLY__c.field-meta.xml
<CustomField>
    <fullName>ProductDealerPriceDLY__c</fullName>
    <label>ProductDealerPriceDLY</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>