force-app/main/default/objects/Product2/fields/ProductDealerPriceSTK__c.field-meta.xml
<CustomField>
    <fullName>ProductDealerPriceSTK__c</fullName>
    <label>ProductDealerPriceSTK</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>