force-app/main/default/objects/Product2/fields/ProductDealerPriceVOR__c.field-meta.xml
<CustomField>
    <fullName>ProductDealerPriceVOR__c</fullName>
    <label>ProductDealerPriceVOR</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>