force-app/main/default/objects/Product2/fields/ProductDiscountRateDLY__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountRateDLY__c</fullName>
    <label>ProductDiscountRateDLY</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>