force-app/main/default/objects/Product2/fields/ProductDiscountRateSTK__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountRateSTK__c</fullName>
    <label>ProductDiscountRateSTK</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>