force-app/main/default/objects/Product2/fields/ProductDiscountRateVOR__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountRateVOR__c</fullName>
    <label>ProductDiscountRateVOR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>