force-app/main/default/objects/Product2/fields/ProductPriceBasic__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceBasic__c</fullName>
    <label>ProductPriceBasic</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>