force-app/main/default/objects/Product2/fields/ProductPriceRetail__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceRetail__c</fullName>
    <label>ProductPriceRetail</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>