force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>ProductType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>