force-app/main/default/objects/Product2/fields/SAC__c.field-meta.xml
<CustomField>
    <fullName>SAC__c</fullName>
    <label>SAC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>