force-app/main/default/objects/Product2/fields/SAC_Description__c.field-meta.xml
<CustomField>
    <fullName>SAC_Description__c</fullName>
    <label>SAC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>