force-app/main/default/objects/Product2/fields/SACDescription__c.field-meta.xml
<CustomField>
    <fullName>SACDescription__c</fullName>
    <label>SACDescription</label>
    <length>200</length>
    <type>Text</type>
</CustomField>