force-app/main/default/objects/Product2/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>