force-app/main/default/objects/Product2/fields/SW_Message__c.field-meta.xml
<CustomField>
    <fullName>SW_Message__c</fullName>
    <label>SW Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>