force-app/main/default/objects/Product2/fields/UK_Message__c.field-meta.xml
<CustomField>
    <fullName>UK_Message__c</fullName>
    <label>UK Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>