force-app/main/default/objects/Product2/recordTypes/Parts.recordType-meta.xml
<RecordType>
    <fullName>Parts</fullName>
    <active>true</active>
    <label>Parts</label>
</RecordType>