force-app/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>AMOSCompanyKindCode__c</columns>
    <columns>AMOSSAC__c</columns>
    <columns>MSRP__c</columns>
    <columns>NRRP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>